--- a/Develop/src/index.css
+++ b/Develop/src/index.css
@@ -118,7 +118,7 @@ tbody tr:nth-child(odd) {
 
 .table {
   width: 80vw;
-  table-layout: fixed;
+  table-layout: auto;
 }
 
 .plus-button{
@@ -136,4 +136,21 @@ margin: 5em;
 .minus-button-two{
   background-color: red;
   border-radius: 50%; 
+  }
+
+  .candidate-card {
+    background-color: #000;
+    color: white;
+    border-radius: 45px;
+    padding: 20px;
+    margin: 20px auto;
+    text-align: center;
+    max-width: 500px;
+    /* box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.2); */
+  }
+  
+  .candidate-card img {
+    border-radius: 10%;
+    margin-bottom: 15px;
+    width: 100%;
   }
