--- a/src/index.css
+++ b/src/index.css
@@ -121,16 +121,22 @@ tbody tr:nth-child(odd) {
   table-layout: auto;
 }
 
+.button-container{
+  display: flex;
+  justify-content: center; /* Centers the buttons horizontally */
+  align-items: center; /* Aligns them vertically */
+  gap: 20px; /* Adds spacing between the buttons */
+  margin-top: 20px; /* Adds space above the buttons */
+}
+
 .plus-button{
 background-color: green;
 border-radius: 50%;
-margin: 5em;
 }
 
 .minus-button{
 background-color: red;
 border-radius: 50%; 
-margin: 5em;
 }
 
 .minus-button-two{
@@ -145,7 +151,7 @@ margin: 5em;
     padding: 20px;
     margin: 20px auto;
     text-align: center;
-    max-width: 500px;
+    max-width: 250px;
     /* box-shadow: 0px 4px 8px rgba(255, 255, 255, 0.2); */
   }
   
